--- a/index.html
+++ b/index.html
@@ -40,3 +40,12 @@
             </ul>
         </aside>
     </div>
+    <footer>
+        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
+
+</body>
+
+</html>
