--- a/contato.html
+++ b/contato.html
@@ -30,4 +30,13 @@
     <script src="script.js"></script>
 </body>
 
+
+<footer>
+    <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+
+</body>
+
 </html>
