--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
 
@@ -31,21 +32,10 @@
                 </p>
             </div>
         </section>
+
         <aside>
             <h3>Links Externos</h3>
             <ul>
                 <li><a href="https://www.linkedin.com/in/danielasoares3/">Linkedin</a></li>
                 <li><a href="https://www.instagram.com/dannyelasoarez/">Instagram</a></li>
-                <li><a href="https://github.com/DanyelaSoares">Git Hub</a></li>
-            </ul>
-        </aside>
-    </div>
-    <footer>
-        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
-    </footer>
-
-</body>
-
-</body>
-
-</html>
+                <li><a href="https://github
