Meu primeiro site

--- a/index.html
+++ b/index.html
@@ -14,28 +14,44 @@
         <h1>Bem-vindo ao meu primeiro site</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <h3>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </h3>
             </ul>
         </nav>
     </header>
 
     <!-- Layout com duas colunas: section e aside -->
     <div class="container">
-        <section class="flex-container">
-            <img src="img/site.jpg" alt="Imagem do site" class="imagem3">
+        <section>
+            <img src="img/site.jpg" alt="Uma imagem ilustrativa do site" class="imagem-site">
             <div class="text-container">
                 <h2><span class="destaque">Objetivo deste site:</span></h2>
-                <p class="texto-maior">Apresentar uma página web utilizando HTML e CSS que contenha os principais
+                <p>
+                <h3>Apresentar uma página web utilizando HTML e CSS que contenha os principais
                     elementos de uma estrutura de site, conforme solicitado nas tarefas do módulo 2 do curso FullStack.
+                    </p>
+                </h3>
                 </p>
             </div>
         </section>
 
         <aside>
-            <h3>Links Externos</h3>
+            <h1>Links Externos</h1>
             <ul>
                 <li><a href="https://www.linkedin.com/in/danielasoares3/">Linkedin</a></li>
                 <li><a href="https://www.instagram.com/dannyelasoarez/">Instagram</a></li>
-                <li><a href="https://github
+                <li><a href="https://github.com">GitHub</a></li>
+            </ul>
+        </aside>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
+
+</html>
