--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>Sobre - Meu Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,35 +20,31 @@
             </ul>
         </nav>
     </header>
+
     <div class="container">
         <section>
-            <h1>Olá, eu me chamo Daniela!
-                <br><br>Sou aspirante a FullStack e serei persistente!
-            </h1>
-            <img src="img/Daniela.jpg" alt="Imagem1" class="imagem1">
+            <h2>Olá, eu me chamo Daniela!</h2>
+            <img src="img/Daniela.jpg" alt="Imagem de Daniela" class="imagem-daniela">
+
+            <p><span class="destaque">Sobre este site:</span></p>
+
+            <h2>Esta é minha primeira página web, confeccionada para cumprir<br> uma tarefa do curso de FullStack.</h2>
+            <img src="img/criar-site.png" alt="Imagem de criação de site" class="imagem-criar-site">
         </section>
 
-        <h1>Sobre o site:</h1>
-        <section>
-            <p><span class="destaque">Sobre este site: </span>
-                <br><br> <span class="texto-maior">Para confeccionar este site, procurei deixar as cores em harmonia e
-                    apliquei as boas práticas de código limpo no limite de meus conhecimentos.
-                    Sei que pode ficar bem melhor que isso.<br>
-                    Vou estar batalhand para aprender mais!
-                    <br>
-
-            </p></span>
-
-            <img src="img/criar-site.png" alt="Imagem2" class="imagem2">
-
-        </section>
+        <aside>
+            <h3>Links Externos</h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/danielasoares3/">Linkedin</a></li>
+                <li><a href="https://www.instagram.com/dannyelasoarez/">Instagram</a></li>
+                <li><a href="https://github.com">GitHub</a></li>
+            </ul>
+        </aside>
     </div>
 
     <footer>
         <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
     </footer>
-
-</body>
 
 </body>
 
