--- a/contato.html
+++ b/contato.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Contato</title>
+    <title>Contato</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Bem-vindo ao meu primeiro site</h1>
+        <h1>Bem-vindo ao meu site</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,33 +19,34 @@
             </ul>
         </nav>
     </header>
-    <h1 class="titulo-contato">Entre em Contato</h1>
 
-    <form id="contactForm">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" required><br>
+    <div class="container">
+        <section>
+            <form id="contactForm">
+                <h2 class="titulo-contato">Contato</h2>
+                <input type="text" id="name" placeholder="Seu Nome" required>
+                <input type="email" id="email" placeholder="Seu Email" required>
+                <textarea id="message" placeholder="Sua Mensagem" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+            <div class="mensagem-confirmacao" id="response" style="display:none;"></div>
+        </section>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" required><br>
+        <aside>
+            <h3>Links Externos</h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/danielasoares3/">Linkedin</a></li>
+                <li><a href="https://www.instagram.com/dannyelasoarez/">Instagram</a></li>
+                <li><a href="https://github.com">GitHub</a></li>
+            </ul>
+        </aside>
+    </div>
 
-        <label for="message">Mensagem:</label><br>
-        <textarea id="message" required></textarea><br>
-
-        <button type="submit">Enviar</button>
-    </form>
-
-    <div id="response"></div>
+    <footer>
+        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+    </footer>
 
     <script src="script.js"></script>
-</body>
-
-
-<footer>
-    <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
-</footer>
-
-</body>
-
 </body>
 
 </html>
